--- a/config/home/files/qt5ct/qt5ct.conf
+++ b/config/home/files/qt5ct/qt5ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=/nix/store/n41cm9hw4gqfh8y0llqphjih4ni5zzm7-qt5ct-1.8/share/qt5ct/colors/darker.conf
+color_scheme_path=~/.config/qt5ct/colors/Catppuccin-Macchiato.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=gtk2
+style=Adwaita-Dark
 
 [Fonts]
-fixed="Sans Serif,12,-1,5,50,0,0,0,0,0"
-general="Sans Serif,12,-1,5,50,0,0,0,0,0"
+fixed="Source Han Serif,16,-1,5,75,0,0,0,0,0,Bold"
+general="Source Han Serif,16,-1,5,75,0,0,0,0,0,Bold"
 
 [Interface]
 activate_item_on_single_click=1
