--- a/config/home/files/strawberry/strawberry.conf
+++ b/config/home/files/strawberry/strawberry.conf
@@ -184,7 +184,7 @@ providers=Genius, Lyrics.ovh, LoloLyrics, Musixmatch, songlyrics.com, azlyrics.c
 [MainWindow]
 current_tab=5
 do_not_show_sponsor_message=true
-file_path=/run/media/admin/F376/Music
+file_path=~/Music
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\t\xeb\0\0\x5[\0\0\0\0\0\0\0\0\0\0\t\xff\0\0\x5\x9f\0\0\0\0\x2\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\t\xeb\0\0\x5[)
 hidden=false
 maximized=true
